Push first GET
